# agro-commodity-insights

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/: soybean_prices.csv
docs/: architecture.md
scripts/: analyze.py  report.py
src/agromarket/: __init__.py  analyze.py  config.py  data_io.py  indicators.py  models.py  report.py
tests/: test_analyze.py  test_indicators.py
